Fixed spacing
added vw settings which overrides px values but still allows for backwards compatibility with older browsers.

--- a/Styles/Order_Generation.css
+++ b/Styles/Order_Generation.css
@@ -22,7 +22,9 @@
 
 .marketimage {
   width: 277px;
+  width: 14.5vw;
   height: 277px;
+  height: 14.5vw;
 }
 
 .marketimage1 {
