--- a/Styles/index.css
+++ b/Styles/index.css
@@ -26,6 +26,7 @@
   font-family: 'Chinese Rocks Rg', sana-serif;
   margin: 0;
   font-size: 150px;
+  font-size: 11.719vw;
   font-weight: 900;
   cursor: default;
   color: white;
@@ -34,6 +35,7 @@
 .pagetexttitle {
   font-family: 'Chinese Rocks Rg', sana-serif;
   font-size: 27px;
+  font-size: 1.406vw;
   font-weight: 900;
   cursor: default;
   margin-top: 45px;
@@ -44,6 +46,7 @@
 .pagetexttitleb {
   font-family: 'Chinese Rocks Rg', sana-serif;
   font-size: 150px;
+  font-size: 7.813vw;
   font-weight: 900;
   cursor: default;
   margin: 0;
@@ -53,6 +56,7 @@
 .pagetexttitlew {
   font-family: 'Chinese Rocks Rg', sana-serif;
   font-size: 150px;
+  font-size: 7.813vw;
   font-weight: 900;
   cursor: default;
   margin: 0;
@@ -62,6 +66,7 @@
 .pagetextlargew {
   font-family: 'Chinese Rocks Rg', sana-serif;
   font-size: 47px;
+  font-size: 2.448vw;
   font-weight: 900;
   cursor: default;
   margin: 0;
@@ -71,6 +76,7 @@
 .pagetextmediumw {
   font-family: 'Chinese Rocks Rg', sana-serif;
   font-size: 37px;
+  font-size: 1.927vw;
   font-weight: 900;
   cursor: default;
   margin: 0;
@@ -79,6 +85,7 @@
 .pagetextsmallw1 {
   font-family: 'Chinese Rocks Rg', sana-serif;
   font-size: 22px;
+  font-size: 1.146vw;
   font-weight: 900;
   cursor: default;
   margin: 0;
@@ -88,6 +95,7 @@
 .pagetextsmallw {
   font-family: 'Chinese Rocks Rg', sana-serif;
   font-size: 20px;
+  font-size: 1.042vw;
   font-weight: 900;
   cursor: default;
   margin: 0;
@@ -96,6 +104,7 @@
 .pagetextlargeb {
   font-family: 'Chinese Rocks Rg', sana-serif;
   font-size: 47px;
+  font-size: 2.448vw;
   font-weight: 900;
   cursor: default;
   margin: 0;
@@ -105,6 +114,7 @@
 .pagetextmediumb {
   font-family: 'Chinese Rocks Rg', sana-serif;
   font-size: 37px;
+  font-size: 1.927vw;
   font-weight: 900;
   cursor: default;
   margin: 0;
@@ -114,6 +124,7 @@
 .pagetextsmallb1 {
   font-family: 'Chinese Rocks Rg', sana-serif;
   font-size: 22px;
+  font-size: 1.146vw;
   font-weight: 900;
   cursor: default;
   margin: 0;
@@ -123,6 +134,7 @@
 .pagetextsmallb {
   font-family: 'Chinese Rocks Rg', sana-serif;
   font-size: 20px;
+  font-size: 1.042vw;
   font-weight: 900;
   cursor: default;
   margin: 0;
@@ -131,6 +143,7 @@
 /*PS Added*/
 .trademarktitle {
   margin-top: 77px;
+  margin-top: 4.01vw;
   margin-bottom: 0px;
 }
 /*PS Added*/
@@ -138,6 +151,7 @@
   background-color: black;
   display: grid;
   grid-template-columns: auto 105px auto 105px auto;
+  grid-template-columns: auto 5.469vw auto 5.469vw auto;
   grid-template-rows: auto auto;
 }
 /*PS Added*/
@@ -174,6 +188,7 @@
 .marketing-a {
   grid-column: 1;
   margin-top: 50px;
+  margin-top: 2.604vw;
   margin-left: 25px;
   background-color: black;
 }
@@ -201,7 +216,9 @@
 .marketing-f {
   grid-column: 6;
   margin-top: 50px;
+  margin-top: 2.604vw;
   margin-right: 25px;
+  margin-right: 1.302vw;
   background-color: black;
 }
 /*PS Added*/
@@ -211,7 +228,9 @@
   flex-direction: column;
   text-align: center;
   height: 325px;
+  height: 17vw;
   width: 675px;
+  width: 35.16vw;
   margin-top: 50px;
   justify-content: space-between;
 }
@@ -221,14 +240,18 @@
   flex-direction: column;
   height: 325px;
   width: 350px;
+  width: 18.2vw;
   margin-top: 50px;
+  margin-top: 2.604vw;
   justify-content: center;
 }
 /*PS Added*/
 .marketinner {
   display: flex;
   height: 277px;
+  height: 14.5vw;
   width: 675px;
+  width: 35vw;
   justify-content: space-between;
 }
 /*PS Added*/
@@ -251,9 +274,13 @@
   display: flex;
   flex-direction: column;
   height: 325px;
+  height: 16.927vw;
   width: 580px;
+  width: 30.208vw;
   margin-top: 90px;
+  margin-top: 4.688vw;
   margin-bottom: 90px;
+  margin-bottom: 4.688vw;
   line-height: 350%;
   text-align: center;
 }
@@ -262,13 +289,16 @@
   display: flex;
   justify-content: center;
   margin-top: 50px;
+  margin-top: 2.604vw;
 }
 /*PS Added*/
 .offersdiv {
   display: flex;
   justify-content: center;
   margin-top: 70px;
+  margin-top: 3.646vw;
   margin-bottom: 100px;
+  margin-bottom: 5.208vw;
   width: 100%;
 }
 /*PS Added*/
@@ -276,7 +306,9 @@
   display: flex;
   justify-content: space-evenly;
   margin-top: 70px;
+  margin-top: 3.646vw;
   margin-bottom: 140px;
+  margin-bottom: 7.292vw;
   width: 100%;
 }
 /*PS Added*/
@@ -286,6 +318,7 @@
   justify-content: space-evenly;
   text-align: center;
   width: 330px;
+  width: 17.188vw;
 }
 /*PS Added*/
 .solosinnerdiv1,
@@ -293,12 +326,14 @@
   display: flex;
   flex-direction: column;
   margin-top: 20px;
+  margin-top: 1.042vw;
   text-align: center;
 }
 /*PS Added*/
 .solosinnerdiv2 {
   margin-top: 0px;
   margin-bottom: 40px;
+  margin-bottom: 2.083vw;
   text-align: left;
 }
 /*PS Added*/
@@ -306,7 +341,9 @@
   display: flex;
   justify-content: space-evenly;
   margin-top: 120px;
+  margin-top: 6.25vw;
   margin-bottom: 185px;
+  margin-bottom: 9.635vw;
   width: 100%;
 }
 /*PS Added*/
@@ -314,9 +351,11 @@
 .curatedinnerdiv2 {
   display: flex;
   height: 500px;
+  height: 26.042vw;
   flex-direction: column;
   justify-content: center;
   width: 400px;
+  width: 20.833vw;
   line-height: 275%;
   white-space: pre-wrap;
   background-color: aqua;
@@ -324,6 +363,7 @@
 /*PS Added*/
 .curatedinnerdiv2 {
   height: 200px;
+  height: 10.417vw;
   line-height: 200%;
   background-color: red;
 }
@@ -344,7 +384,9 @@
   justify-content: space-between;
   align-items: center;
   padding-left: 45px;
+  padding-left: 2.344vw;
   padding-right: 45px;
+  padding-right: 2.344vw;
   margin: 0;
 }
 /*PS Added*/
@@ -355,7 +397,9 @@
   justify-content: space-evenly;
   align-items: center;
   padding-left: 45px;
+  padding-left: 2.344vw;
   padding-right: 45px;
+  padding-right: 2.344vw;
   margin: 0;
 }
 /*PS Added*/
@@ -374,39 +418,47 @@
   justify-content: flex-end;
   background-color: black;
   padding-left: 40px;
+  padding-left: 2.083vw;
 }
 /*PS Added*/
 .nav-wrapper {
   display: flex;
   flex-direction: row;
   padding-inline: 50px;
+  padding-inline: 3.906vw;
   align-items: center;
   height: 60px;
+  height: 4.688vw;
   background-color: black;
 }
 /*PS Added*/
 .textnavmenu {
   margin: 0;
   margin-left: 25px;
+  margin-left: 1.953vw;
   font-family: opensans, Arial;
   color: white;
   font-weight: 80;
   cursor: pointer;
   font-size: 20px;
+  font-size: 1.563vw;
 }
 /*PS Added*/
 .textaccountmenu {
   margin: 0;
   margin-left: 25px;
+  margin-left: 1.953vw;
   font-family: opensans, Arial;
   color: white;
   font-weight: 80;
   cursor: pointer;
   font-size: 20px;
+  font-size: 1.563vw;
 }
 /*PS Added*/
 .header {
   height: 250px;
+  height: 19.531vw;
   align-items: center;
   text-align: center;
   display: flex;
@@ -415,16 +467,20 @@
   justify-content: center;
   color: white;
   font-size: 100px;
+  font-size: 7.813vw;
   margin: 0px;
 }
 /*PS Added*/
 .button1 {
   background-color: white;
   border-radius: 15px;
+  border-radius: 1.172vw;
   border-width: 5px;
+  border-width: 0.391vw;
   border-color: black;
   border: solid;
   height: 71px;
+  height: 5.547vw;
   width: 100%;
 }
 .button1:hover {
